k8s/02-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: yellowbooks
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: 336098584974.dkr.ecr.ap-southeast-1.amazonaws.com/yellowbooks/api:15a0102
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 20
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: yellowbooks
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /health
    alb.ingress.kubernetes.io/success-codes: "200-399"
spec:
  selector:
    app: api
  ports:
    - name: http
      port: 80
      targetPort: 3000
  type: ClusterIP
