k8s/03-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: yellowbooks
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: web
          image: 336098584974.dkr.ecr.ap-southeast-1.amazonaws.com/yellowbooks/web:b03d6d4
          ports:
            - containerPort: 3000
          readinessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 20
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: yellowbooks
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/success-codes: "200-399"
spec:
  selector:
    app: web
  ports:
    - name: http
      port: 80
      targetPort: 3000
  type: ClusterIP
